Menambahkan Logo di topappbar

--- a/app/src/main/res/values-in/string.xml
+++ b/app/src/main/res/values-in/string.xml
@@ -9,4 +9,5 @@
     <string name="share_note">Bagikan Catatan</string>
     <string name="back">Kembali</string>
     <string name="note_not_found">Catatan tidak ditemukan</string>
+    <string name="logo_app">Logo Aplikasi</string>
 </resources>
